style.css
html {
    background-color: white;
    font-family: Helvetica, Arial, sans-serif;
    box-sizing: border-box;
}

*, *:before, *:after {
    box-sizing: inherit;
}

body {
    display: flex;
    flex-flow: column;
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
}

a:hover {
    color:#EF4038;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

button {
    border-style: solid;
}

header {
    display: flex;
    flex-flow: row nowrap;
    flex-shrink: 0;
    height: 90px;
    padding: 20px;

    background-color: rgb(255, 255, 255);
}

header a {
    font-size: 18px;
    font-weight: 500;
}

header .header-links {
    display: flex;
    gap: 20px;
    justify-content: center;
    align-items: center;
    margin-right: 20px;
}

.logo {
    margin-right: auto;
    margin-left: 20px;
    height: 50px;
    width: 55px;
    flex-shrink: 0;
}

.content {
    display: flex;
    flex: 1;
    flex-flow: column nowrap;
}

.content-one,
.content-two,
.content-three,
.content-four {
    display: flex;
    flex: 1;
    padding: 50px 25%;
    justify-content: center;
    align-items: center;
    flex-flow: column nowrap;
}

.content-one {
    background-color: rgb(255, 255, 255);
    margin-top: 20px;
    padding-top: 80px;
    padding-bottom: 150px;
    background-image: url(./images/spruce-cropped.png);
    background-repeat: no-repeat;
    background-position: 67% 0px;
    justify-content: center;
    align-items: flex-start;
    line-height: 12px;
}

.content h1 {
    font-size: 50px;
}

.content-one .hero-bar {
    margin-top: 20px;
    margin-bottom: 32px;
    padding: 8px 120px;
    background-color: #EF4038;
}

.content-one .hero-button {
    border: solid;
    padding: 15px;
    font-size: 18px;
    
    border-radius: 10px;
    background-color: transparent;
}

.content .hero-button:hover {
    border-color: #EF4038;
    color: #EF4038;
}

a, h1, h3 {
    color: rgb(61, 61, 61);
}

.content-two {
    background-color: rgb(255, 245, 245);
    padding-bottom: 0;
}

.content-two h3, .content-two p, .content-four h3, .content-four p {
    color: rgb(156, 94, 94);
}

.content-two .images-wrapper {
    display: flex;
    height: 300px;
    width: 900px;
    flex-flow: column wrap;
    align-content: center;
    column-gap: 100px;
    margin-top: 40px;
}

.content-two img, .content-two p {
    flex-shrink: 0;
    
}

.content-two img { 
    border: solid;
    border-color: #dda19e;
    border-radius: 20px;
    height: 150px;
    width: 150px;
    object-fit: contain;
    padding: 20px;
}

.content-two .img4 { 
    padding: 40px;
}

.content-two p {
    text-align: center;
    width: 150px;
}

.content-three {
    color: rgb(107, 63, 63);
}

.content-three {
    background-color: rgb(255, 179, 179);
}

.content-three p {
    text-align: center;
    font-size: 18px;
}

.content-three h3 {
    color: rgb(107, 63, 63);
}

.content-three h4 {
    flex-direction: flex-end;
}

.content-four {
    background-color: rgb(255, 126, 126);
    flex-flow: row;
}

.content-four .wrapper {
    display: flex;
    flex: 1;
    width: 900px;
    height: 200px;
    padding: 50px;
    border-radius: 20px;
    background-color: rgb(255, 255, 255);
    justify-content: flex-start;
    align-items: center;
    gap: 50px;
}
.content-four a {
    margin-left: auto;
    border: solid;
    text-align: center;
    padding: 10px 20px;
    font-size: 24px;
    border-radius: 10px;
    background-color: transparent;
}

.content-four a:hover {
    border-color: #EF4038;
    color: #EF4038;
}

@media only screen and (max-width: 1000px) {
    .content-one {
        margin-top: 50px;
        padding-bottom: 50px;
        background-position: 50% 0;
    }
    .content-one-container {
        margin-top: 500px;
        align-items: center;
    }
    .content-two .images-wrapper {
        flex-flow: column wrap;
        height: 600px;
        width: 600px;
        row-gap: 20px;
        column-gap: 80px;
        margin-bottom: 20px;
    }
    .content-four .wrapper{
        display: flex;
        flex-flow: column;
        justify-content: center;
        height: 300px;
        padding: 0px;
        text-align: center;
        padding: 0px 50px;
        gap: 10px;
    }
    .content-four a {
        margin-right: auto;
    }
}

footer {
    display: flex;
    flex-flow: row wrap;
    background-color: #E1E3E4;
    flex-shrink: 0;
    padding: 40px;
    gap: 16px;
    align-items: center;
    
}

footer a {
    color: rgb(92, 91, 91);
}

footer a:hover {
    color: rgb(26, 26, 26);
}

footer p {
    margin-left: auto;
    color: rgb(92, 91, 91);
}

